fix the footer issue, add grid gap and changed the width of the calculator

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ html {
 
 body {
   background: #d6cab0;
-  min-height: 80vh;
+  min-height: 100vh;
   margin-top: 100px;
   display: grid;
   place-content: center;
@@ -28,7 +28,7 @@ h1 {
   letter-spacing: 2px;
   word-spacing: 1px;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 
 .calculator {
@@ -38,10 +38,10 @@ h1 {
   grid-template-columns: repeat(4, 60px);
   grid-template-rows: minmax(100px, auto) repeat(5, 60px);
   background: #86817c; 
-  padding: 15px 10px;
+  padding: 25px 5px;
   border-radius: 15px;
-  grid-row-gap: 5px;
-  grid-column-gap: 5px;
+  grid-row-gap: 10px;
+  grid-column-gap: 10px;
 }
 
 .span {
@@ -99,7 +99,6 @@ button:hover {
 
 .footer {
   margin-top: 50px;
-  bottom: 0;
   width: 100%;
   display: flex;
   align-items: center;
